5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1807_2573.log
== TEST (2019-06-05 10:22:24) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))

for i in range(size(vp)) and range(size(vh)):
	imc=vp[i]/(2*vh[i])
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:26:20) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))

for i in range(size(vp)) and range(size(vh)):
	imc=vp[i]/(2*vh[i])
o= zeros(i, dtype=float)
o[i]=imc[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:27:29) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))

for i in range(size(vp)) and range(size(vh)):
o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])

	o[i]=imc[i]
-- ERROR:
File "XXXX", line 7
    o= zeros(i, dtype=float)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:27:37) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))

for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])

	o[i]=imc[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:28:52) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))

for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])
o[i]=imc[i]
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:33:43) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])
	o[a]=imc[i]
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:40:10) 
-- CODE:
from numpy import*

vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])
	o[]
print(o)
-- ERROR:
File "XXXX", line 9
    o[]
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:41:55) 
-- CODE:
from numpy import
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0

for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])
	
print(imc)
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:41:59) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0

for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc=vp[i]/(2*vh[i])
	
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:46:20) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0

for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc[i]=vp[i]/(2*vh[i])
	
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:46:33) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0

for i in range(size(vp)) and range(size(vh)):
	o= zeros(i, dtype=float)
	imc[i]=vp[i]/(2*vh[i])
	
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:47:15) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):
	
	imc[i]=vp[i]/(2*vh[i])
	
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:48:37) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):
	
	imc[i]=vp[i]/2*vh[i]
	
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:49:46) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):
	
	imc[i]=vp[i]/(vh[i]*vh[i])
	
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:51:13) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	
print(round(imc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:00) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:33) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print(max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:25) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:" max(imc))
-- ERROR:
File "XXXX", line 10
    print("O MAIOR IMC DA TURMA EH:" max(imc))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:30) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:03:39) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso").upper()
elif(17>= max(imc) <= 18.49):
	print("abaixo do peso").upper()
elif(18.5 >= max(imc) <= 24.99):
	print("peso normal").upper()
elif(25 >= max(imc) <= 29.99):
	print("acima do peso").upper()
elif(30 >= max(imc) <= 34.99):
	print("obesidade").upper():
elif(35 >= max(imc) <= 39.99):
	print("obesidade severa").upper()
elif(max(imc)>40):
	print("obesidade morbida").upper()
-- ERROR:
File "XXXX", line 21
    print("obesidade").upper():
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:03:46) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso").upper()
elif(17>= max(imc) <= 18.49):
	print("abaixo do peso").upper()
elif(18.5 >= max(imc) <= 24.99):
	print("peso normal").upper()
elif(25 >= max(imc) <= 29.99):
	print("acima do peso").upper()
elif(30 >= max(imc) <= 34.99):
	print("obesidade").upper()
elif(35 >= max(imc) <= 39.99):
	print("obesidade severa").upper()
elif(max(imc)>40):
	print("obesidade morbida").upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:52) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(17>= max(imc) <= 18.49):
	print("abaixo do peso".upper())
elif(18.5 >= max(imc) <= 24.99):
	print("peso normal".upper())
elif(25 >= max(imc) <= 29.99):
	print("acima do peso".upper())
elif(30 >= max(imc) <= 34.99):
	print("obesidade".upper())
elif(35 >= max(imc) <= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:34) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(17>= max(imc) <= 18.49):
	print("abaixo do peso".upper())
elif(18.5 >= max(imc) <= 24.99):
	print("peso normal".upper())
elif(25 >= max(imc) <= 29.99):
	print("acima do peso".upper())
elif(30 >= max(imc) <= 34.99):
	print("obesidade".upper())
elif(35 >= max(imc) <= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:07:38) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(17<= max(imc) >= 18.49):
	print("abaixo do peso".upper())
elif(18.5 <= max(imc) >= 24.99):
	print("peso normal".upper())
elif(25 <= max(imc) >= 29.99):
	print("acima do peso".upper())
elif(30 <= max(imc) >= 34.99):
	print("obesidade".upper())
elif(35 <= max(imc) >= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:44) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(17 >= max(imc) <= 18.49):
	print("abaixo do peso".upper())
elif(18.5 >= max(imc) <= 24.99):
	print("peso normal".upper())
elif(25 >= max(imc) <= 29.99):
	print("acima do peso".upper())
elif(30 >= max(imc) <= 34.99):
	print("obesidade".upper())
elif(35 >= max(imc) <= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:11:31) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(17 >= max(imc) <= 18.49):
	print("abaixo do peso".upper())
elif(18.5 == max(imc) <= 24.99):
	print("peso normal".upper())
elif(25 == max(imc) <= 29.99):
	print("acima do peso".upper())
elif(30 == max(imc) <= 34.99):
	print("obesidade".upper())
elif(35 == max(imc) <= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:15:15) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49:
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(35 == max(imc) <= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
File "XXXX", line 14
    elif(max(imc)>=17 and max(imc)<=18.49:
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:15:25) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(35 == max(imc) <= 39.99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:16:30) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(max(imc)>=35 and max(imc)<=39,99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:16:51) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(3, dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(max(imc)>=35 and max(imc)<=39,99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- EXECUTION TIME:
1.04592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 7, in <module>
    imc[i]=vp[i]/(vh[i]*vh[i])
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:19:46) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(size(vh), dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(max(imc)>=35 and max(imc)<=39,99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- EXECUTION TIME:
1.08304
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 20:12:49) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(size(vh), dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(max(imc)>=35 and max(imc)<=39,99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 20:13:46) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(size(vh), dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(max(imc)>=35 and max(imc)<=39,99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 20:14:03) 
-- CODE:
from numpy import*
vp= array(eval(input("Insira o peso dos alunos:")))
vh= array(eval(input("Insira a altura dos alunos:")))
a=0
imc=zeros(size(vh), dtype=float)
for i in range(size(vp)) and range(size(vh)):	
	imc[i]=vp[i]/(vh[i]*vh[i])
	imc[i]=round(imc[i],2)
print(imc)
print("O MAIOR IMC DA TURMA EH:", max(imc))

if(max(imc) < 17):
	print("muito abaixo do peso".upper())
elif(max(imc)>=17 and max(imc)<=18.49):
	print("abaixo do peso".upper())
elif(max(imc)>=18.5 and max(imc)<=24.99):
	print("peso normal".upper())
elif(max(imc)>=25 and max(imc)<= 29.99):
	print("acima do peso".upper())
elif(max(imc)>=30 and max(imc)<=34.99):
	print("obesidade".upper())
elif(max(imc)>=35 and max(imc)<=39,99):
	print("obesidade severa".upper())
elif(max(imc)>40):
	print("obesidade morbida".upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
